--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,9 +6,44 @@
     "configurations": [
         {
             "type": "node",
+            "request": "attach",
+            "name": "Docker: Attach to Node",
+            "port": 9229,
+            "address": "localhost",
+            "localRoot": "${workspaceFolder}",
+            "remoteRoot": "/usr/src/app",
+            "protocol": "inspector"
+        },
+        {
+            "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceFolder}\\index.js"
+            "program": "${workspaceFolder}/index.js"
+        },
+        {
+            "type": "node",
+            "request": "attach",
+            "name": "Attach to Docker",
+            "port": 5858,
+            "restart": true,
+            "localRoot": "${workspaceFolder}",
+            "remoteRoot": "/server",
+            "protocol": "auto"
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch in Docker",
+            "runtimeExecutable": "npm",
+            "runtimeArgs": [ "run", "docker:debug" ],
+            "port": 5858,
+            "restart": true,
+            "timeout": 60000,
+            "localRoot": "${workspaceFolder}",
+            "remoteRoot": "/server",
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "neverOpen",
+            "protocol": "auto"
         }
     ]
 }
