--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,5 @@ services:
     ports:
       - "56789:80"
       - "5858:5858"
+    environment:
+      - IMGSRV_DOMAINS=www.vistaprint.com,upload.wikimedia.org
