--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,5 +9,6 @@ services:
     ports:
       - "56789:80"
       - "9222:9222"
-    # environment:
+    environment:
       # - IMGSRV_DOMAINS=www.vistaprint.com,upload.wikimedia.org
+      - NODE_TLS_REJECT_UNAUTHORIZED=0
