--- a/package.json
+++ b/package.json
@@ -6,13 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "debug": "nodemon --legacy-watch --watch ./ --inspect=0.0.0.0:9222 --nolazy ./server.js",
-    "docker:debug": "docker-compose up",
-    "docker:build": "docker build . -t imgsrv",
-    "docker:run": "docker run --name imgsrv -p 56789:80 imgsrv",
-    "docker:interact": "docker run -it imgsrv /bin/bash",
-    "docker:stop": "docker stop imgsrv & docker rm imgsrv",
-    "docker:attach": "docker attach imgsrv",
-    "docker": "npm run docker:stop && npm run docker:build && npm run docker:run",
+    "docker:debug": "docker-compose up debug",
+    "docker": "docker-compose up web",
     "lint": "eslint .",
     "lint:fix": "eslint --fix ."
   },
