--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,11 @@ services:
   web:
     build: .
     command: npm start
+    tmpfs:
+      - /imgsrvtmp:size=1G
     ports:
       - "56789:80"
     environment:
       # - IMGSRV_DOMAINS=www.vistaprint.com,upload.wikimedia.org
       - NODE_TLS_REJECT_UNAUTHORIZED=0
+      - IMGSRV_TEMP=/imgsrvtmp
