Whitelist supports directories

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,11 @@ services:
       - "56789:80"
       - "9222:9222"
     environment:
-      # - IMGSRV_DOMAINS=www.vistaprint.com,upload.wikimedia.org
+      - IMGSRV_DOMAINS=www.vistaprint.com,s3-eu-west-1.amazonaws.com/sitecore-media-bucket
       - NODE_TLS_REJECT_UNAUTHORIZED=0
       - IMGSRV_LOG_INDENT=1
       - IMGSRV_VERBOSE=1
+      #- IMGSRV_MAX_SIZE=2457408
   web:
     build: .
     command: npm start
