--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,9 @@ services:
       - IMGSRV_LOG_INDENT=1
       - IMGSRV_VERBOSE=1
       #- IMGSRV_MAX_SIZE=2457408
-      - NODE_ENV=production
+      - NODE_ENV=development
+      - NEWRELIC_LICENSE_KEY
+      - IMGSRV_MAX_WIDTH=2460
   web:
     build: .
     command: npm start
@@ -29,3 +31,4 @@ services:
       - IMGSRV_TEMP=/imgsrvtmp
       - IMGSRV_LOG_INDENT=1
       - IMGSRV_VERBOSE=1
+      - NEWRELIC_LICENSE_KEY
